--- a/index.html
+++ b/index.html
@@ -385,13 +385,13 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
     </form>
   </div>
   <br>
-  <div class="box"> <a href="#"></a>
+  <div class="box"> <a href="https://www.jjfjj.com/" target="_blank"></a>
     <p><img class="icon" src="img/jiaowuxitong.png"></p>
-    <p class="url">啥也没有</p>
+    <p class="url">jjfjj.com</p>
   </div>
-  <div class="box"> <a href="#"></a>
-    <p><img class="icon" src="img/tieba.png"></p>
-    <p class="url">啥也没有</p>
+  <div class="box"> <a href="https://www.78456.cn/" target="_blank"></a>
+    <p><img class="icon" src="img/jiaowuxitong.png"></p>
+    <p class="url">78456.cn</p>
   </div>
   <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/google_plus5.png"></p>
@@ -420,7 +420,7 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
 </div>
 <div style="z-index: 1;position: relative;">
 <div id="app-items">
-  <div class="title"> 感动常在 · 2022 </div>
+  <div class="title"> 感动常在 · 2022 本站域名及所有连接中的域名正在出售中。。。（万网搜索）</div>
   <br>
   <div class="box"> <a href=""></a>
     <p><img class="icon" src="img/xiaoshuo.png"></p>
