--- a/index.html
+++ b/index.html
@@ -360,6 +360,110 @@ li {
     background-color: transparent;
     padding: 0 13px 0 13px
 }
+
+
+/* 6 *********************************/
+.custom-btn {
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 50px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+   box-shadow: inset 2px 2px 2px 0px rgba(255,255,255,.5),
+    inset -7px -7px 10px 0px rgba(0,0,0,.1),7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  text-shadow:  2px 2px 3px rgba(255,255,255,.5),
+              -4px -4px 6px rgba(116, 125, 136, .2);
+  outline: none;
+}
+.btn-6 {
+  color: rgba(234,76,137,1);
+  background: rgb(247,150,192);
+  line-height: 42px;
+  padding: 0;
+  border: none;
+}
+.btn-6 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn-6:before,
+.btn-6:after {
+  position: absolute;
+  content: "";
+  height: 0%;
+  width: 1px;
+ box-shadow:
+   -1px -1px 20px 0px rgba(255,255,255,1),
+   -4px -4px 5px 0px rgba(255,255,255,1),
+   7px 7px 20px 0px rgba(0,0,0,.4),
+   4px 4px 5px 0px rgba(0,0,0,.3);
+}
+.btn-6:before {
+  right: 0;
+  top: 0;
+  transition: all 500ms ease;
+}
+.btn-6:after {
+  left: 0;
+  bottom: 0;
+  transition: all 500ms ease;
+}
+.btn-6:hover{
+  background: transparent;
+  color: #76aef1;
+  box-shadow: none;
+}
+.btn-6:hover:before {
+  transition: all 500ms ease;
+  height: 100%;
+}
+.btn-6:hover:after {
+  transition: all 500ms ease;
+  height: 100%;
+}
+.btn-6 span:before,
+.btn-6 span:after {
+  position: absolute;
+  content: "";
+  box-shadow:
+   -1px -1px 20px 0px rgba(255,255,255,1),
+   -4px -4px 5px 0px rgba(255,255,255,1),
+   7px 7px 20px 0px rgba(0,0,0,.4),
+   4px 4px 5px 0px rgba(0,0,0,.3);
+}
+.btn-6 span:before {
+  left: 0;
+  top: 0;
+  width: 0%;
+  height: .5px;
+  transition: all 500ms ease;
+}
+.btn-6 span:after {
+  right: 0;
+  bottom: 0;
+  width: 0%;
+  height: .5px;
+  transition: all 500ms ease;
+}
+.btn-6 span:hover:before {
+  width: 100%;
+}
+.btn-6 span:hover:after {
+  width: 100%;
+}
+/* 6 *********************************/
+
 </style>
 <style>
 html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
@@ -421,7 +525,8 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
 <div style="z-index: 1;position: relative;">
 <div id="app-items">
   <div class="title"> 感动常在 · 2022 </div>
-  <div class="title"> 本站域名及所有连接中的域名正在出售中。。。（<a href="https://mi.aliyun.com/shop/48740" target="_blank">万网链接</a>）</div>
+  <div class="title"> 本站域名及所有连接中的域名正在出售中。。。</div>
+  <div><button class="custom-btn btn-6"><span><a href="https://mi.aliyun.com/shop/48740" target="_blank">购买链接</a></span></button></div>
   <br>
   <div class="box"> <a href=""></a>
     <p><img class="icon" src="img/xiaoshuo.png"></p>
