--- a/index.html
+++ b/index.html
@@ -384,83 +384,37 @@ li {
               -4px -4px 6px rgba(116, 125, 136, .2);
   outline: none;
 }
-.btn-6 {
-  color: rgba(234,76,137,1);
-  background: rgb(247,150,192);
-  line-height: 42px;
-  padding: 0;
+.btn-16 {
   border: none;
+  color: #aaa;
 }
-.btn-6 span {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.btn-6:before,
-.btn-6:after {
+.btn-16:after {
   position: absolute;
   content: "";
-  height: 0%;
-  width: 1px;
- box-shadow:
-   -1px -1px 20px 0px rgba(255,255,255,1),
-   -4px -4px 5px 0px rgba(255,255,255,1),
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
-}
-.btn-6:before {
-  right: 0;
+  width: 0;
+  height: 100%;
   top: 0;
-  transition: all 500ms ease;
-}
-.btn-6:after {
   left: 0;
-  bottom: 0;
-  transition: all 500ms ease;
-}
-.btn-6:hover{
-  background: transparent;
-  color: #76aef1;
-  box-shadow: none;
-}
-.btn-6:hover:before {
-  transition: all 500ms ease;
-  height: 100%;
-}
-.btn-6:hover:after {
-  transition: all 500ms ease;
-  height: 100%;
-}
-.btn-6 span:before,
-.btn-6 span:after {
-  position: absolute;
-  content: "";
+  direction: rtl;
+  z-index: -1;
+  border-radius: 50px;
   box-shadow:
-   -1px -1px 20px 0px rgba(255,255,255,1),
-   -4px -4px 5px 0px rgba(255,255,255,1),
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
+   -7px -7px 20px 0px #fff9,
+   -4px -4px 5px 0px #fff9,
+   7px 7px 20px 0px #0002,
+   4px 4px 5px 0px #0001;
+  transition: all 0.3s ease;
 }
-.btn-6 span:before {
-  left: 0;
-  top: 0;
-  width: 0%;
-  height: .5px;
-  transition: all 500ms ease;
+.btn-16:hover {
+  color: #bbb;
 }
-.btn-6 span:after {
+.btn-16:hover:after {
+  left: auto;
   right: 0;
-  bottom: 0;
-  width: 0%;
-  height: .5px;
-  transition: all 500ms ease;
-}
-.btn-6 span:hover:before {
   width: 100%;
 }
-.btn-6 span:hover:after {
-  width: 100%;
+.btn-16:active {
+  top: 2px;
 }
 /* 6 *********************************/
 
