--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
 <div id="app-items">
   <div class="title"> 感动常在 · 2022 </div>
   <div class="title"> 本站域名及所有连接中的域名正在出售中。。。</div>
-  <div><button class="custom-btn btn-6"><span><a href="https://mi.aliyun.com/shop/48740" target="_blank">购买链接</a></span></button></div>
+  <div><button class="custom-btn btn-6"><span><a href="https://mi.aliyun.com/shop/48740" target="_blank" style="color: #fff; font-size: 13px; text-decoration: none;">购买链接</a></span></button></div>
   <br>
   <div class="box"> <a href=""></a>
     <p><img class="icon" src="img/xiaoshuo.png"></p>
