--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
   <div>
     <button class="custom-btn btn-6">
         <div style="margin-top: -5px;">
-            <span><a href="https://mi.aliyun.com/shop/48740" target="_blank" style="color: #fff; font-size: 18px; text-decoration: none;">购买链接</a></span>
+            <span><a href="https://mi.aliyun.com/shop/48740" target="_blank" style="color: #fff; font-size: 18px; text-decoration: none;">域名列表</a></span>
         </div>
     </button>
   </div>
