--- a/index.html
+++ b/index.html
@@ -443,15 +443,15 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
     </form>
   </div>
   <br>
-  <div class="box"> <a href="#" target="_blank"></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/jiaowuxitong.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href="#" target="_blank"></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/tieba.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href="#" target="_blank"></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/google_plus5.png"></p>
     <p class="url">啥也没有</p>
   </div>
