--- a/index.html
+++ b/index.html
@@ -459,19 +459,19 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
     <p><img class="icon" src="img/tupian.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/wandoujia_youxiribao.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/yingyue1.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/echooit.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/meihua.png"></p>
     <p class="url">啥也没有</p>
   </div>
@@ -480,19 +480,19 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
 <div id="app-items">
   <div class="title"> 感动常在 · 2022 </div>
   <br>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/xiaoshuo.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/baiduyun.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/youxiang.png"></p>
     <p class="url">啥也没有</p>
   </div>
-  <div class="box"> <a href=""></a>
+  <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/web%20app.png"></p>
     <p class="url">啥也没有</p>
   </div>
